force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Customer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>IM_Customer_Account_Name__c</fullName>
    <description>Descriptive name of Customer account from external (Billing) system</description>
    <inlineHelpText>Descriptive name of Customer account from external (Billing) system</inlineHelpText>
    <label>Customer Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>