force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Days_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>IM_Days_at_Risk__c</fullName>
    <formula>IF(
ISBLANK( Retained_Terminated_Date__c ),
Today() - IM_At_Risk_Entered_Date__c, Retained_Terminated_Date__c - IM_At_Risk_Entered_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days at Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>