force-app/main/default/objects/IM_Customer_Account__c/fields/IM_District_Branch_Id__c.field-meta.xml
<CustomField>
    <fullName>IM_District_Branch_Id__c</fullName>
    <description>This is a Source (Billing) System District Id
(maybe same as Oracle billing Id if billed out of Oracle)</description>
    <inlineHelpText>This is a Source (Billing) System District Id
(maybe same as Oracle billing Id if billed out of Oracle)</inlineHelpText>
    <label>District/Branch ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>