force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Enterprise_Nationally_Billed_Account__c.field-meta.xml
<CustomField>
    <fullName>IM_Enterprise_Nationally_Billed_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the customer account is billed as part of an Enterprise Wide or Nationally Billed Account.</description>
    <inlineHelpText>Indicates the customer account is billed as part of an Enterprise Wide or Nationally Billed Account.</inlineHelpText>
    <label>Enterprise/ Nationally Billed Account</label>
    <type>Checkbox</type>
</CustomField>