force-app/main/default/objects/IM_Customer_Account__c/fields/IM_External_Id__c.field-meta.xml
<CustomField>
    <fullName>IM_External_Id__c</fullName>
    <description>Siebel Row_id for migrated records, then Autonuber for new records</description>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <type>AutoNumber</type>
</CustomField>