force-app/main/default/objects/IM_Customer_Account__c/fields/IM_IMGA__c.field-meta.xml
<CustomField>
    <fullName>IM_IMGA__c</fullName>
    <formula>IM_Account__r.IM_IMGA_Indexed__c</formula>
    <label>IMGA</label>
    <type>Text</type>
</CustomField>