force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Inventory_System_Number__c.field-meta.xml
<CustomField>
    <fullName>IM_Inventory_System_Number__c</fullName>
    <description>This is a concatenated unique key for the Billing Number records. Used to apply the Unique Constraint in SFDC.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is a concatenated unique key for the Billing Number records. Used to apply the Unique Constraint in SFDC.</inlineHelpText>
    <label>Inventory System Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>