force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>IM_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the opportunity responsible for the Customer Account</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Accounts</relationshipLabel>
    <relationshipName>Customer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>