force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Outsourced_Customer__c.field-meta.xml
<CustomField>
    <fullName>IM_Outsourced_Customer__c</fullName>
    <description>End Customer serviced by Outsourcer or Third Party Partner</description>
    <inlineHelpText>End Customer serviced by Outsourcer or Third Party Partner</inlineHelpText>
    <label>Outsourced Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>