force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Outsourced_TP__c.field-meta.xml
<CustomField>
    <fullName>IM_Outsourced_TP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Outsourced or Third Party partner customer account</description>
    <inlineHelpText>Check if Outsourced or Third Party partner customer account</inlineHelpText>
    <label>Outsourced/TP</label>
    <type>Checkbox</type>
</CustomField>