force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Product_Class__c.field-meta.xml
<CustomField>
    <fullName>IM_Product_Class__c</fullName>
    <description>The Product class relating to the client account. Populated from the opportunity for IME and maintained manually.</description>
    <label>Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Process Management</fullName>
            </value>
            <value>
                <fullName>Consulting Services</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Data Products</fullName>
            </value>
            <value>
                <fullName>Data Protection</fullName>
            </value>
            <value>
                <fullName>Destruction Services</fullName>
            </value>
            <value>
                <fullName>Digital Archiving and Discovery</fullName>
            </value>
            <value>
                <fullName>Digital Data Protection and Recovery</fullName>
            </value>
            <value>
                <fullName>Document Management Solutions</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Film and Sound</fullName>
            </value>
            <value>
                <fullName>Fulfillment Services</fullName>
            </value>
            <value>
                <fullName>Intellectual Property Management</fullName>
            </value>
            <value>
                <fullName>Records Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>