force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Source_System_Code__c.field-meta.xml
<CustomField>
    <fullName>IM_Source_System_Code__c</fullName>
    <description>Used to identify Business Line. Is based on 4 char values provided by NA BI and used to formulate the Inventory System Number</description>
    <label>Source System Code</label>
    <length>45</length>
    <type>Text</type>
</CustomField>