force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IM_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>