force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>IM_Termination_Date__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>