force-app/main/default/objects/IM_Customer_Account__c/fields/IME_Display_Division__c.field-meta.xml
<CustomField>
    <fullName>IME_Display_Division__c</fullName>
    <formula>IF( ISPICKVAL( IM_Account__r.Division , &quot;Europe&quot;) , &quot;Europe&quot;,
IF( ISPICKVAL( IM_Account__r.Division , &quot;Latin America&quot;) , &quot;Latin America&quot;,
IF( ISPICKVAL( IM_Account__r.Division , &quot;Asia Pacific&quot;) , &quot;Asia Pacific&quot;,
IF( ISPICKVAL( IM_Account__r.Division , &quot;Global&quot;) , &quot;Global&quot;,
IF( ISPICKVAL( IM_Account__r.Division , &quot;North America&quot;) , &quot;North America&quot;,
 &quot;Error&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>