force-app/main/default/objects/IM_Customer_Account__c/fields/IMGA_Lookup__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Lookup__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;IM_Account__r.IMGA_Lookup__c, IM_Account__r.IMGA_Lookup__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMGA (Lookup)</label>
    <type>Text</type>
</CustomField>