force-app/main/default/objects/IM_Customer_Account__c/fields/IMSight_ID__c.field-meta.xml
<CustomField>
    <fullName>IMSight_ID__c</fullName>
    <externalId>true</externalId>
    <label>IMSight ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>