force-app/main/default/objects/IM_Customer_Account__c/fields/Incoming_Service_Requests_Last_6_mos__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Service_Requests_Last_6_mos__c</fullName>
    <inlineHelpText>Total number of Customer Care requests logged in AWS for customer.</inlineHelpText>
    <label>Incoming Service Requests - Last 6 mos</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>