force-app/main/default/objects/IM_Customer_Account__c/fields/Intl_CY_Last_Month_RM__c.field-meta.xml
<CustomField>
    <fullName>Intl_CY_Last_Month_RM__c</fullName>
    <description>International Billings from CURRENT YEAR / LAST MONTH</description>
    <inlineHelpText>International Billings from CURRENT YEAR / LAST MONTH</inlineHelpText>
    <label>delete_Intl - CY Last Month - RM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>