force-app/main/default/objects/IM_Customer_Account__c/fields/Intl_CY_YTD_Digital__c.field-meta.xml
<CustomField>
    <fullName>Intl_CY_YTD_Digital__c</fullName>
    <description>International Billings from CURRENT YEAR / YEAR-TO-DATE</description>
    <inlineHelpText>International Billings from CURRENT YEAR / YEAR-TO-DATE</inlineHelpText>
    <label>delete_Intl - CY YTD - Digital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>