force-app/main/default/objects/IM_Customer_Account__c/fields/Intl_CY_YTD_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>Intl_CY_YTD_TOTAL__c</fullName>
    <formula>Intl_CY_YTD_Digital__c +

Intl_CY_YTD_DMS__c  +

Intl_CY_YTD_Off_Site_Data_Protection__c +

 Intl_CY_YTD_RM__c +

 Intl_CY_YTD_Secure_Shredding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intl - CY YTD - TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>