force-app/main/default/objects/IM_Customer_Account__c/fields/Intl_PY_Full_Year_Secure_Shredding__c.field-meta.xml
<CustomField>
    <fullName>Intl_PY_Full_Year_Secure_Shredding__c</fullName>
    <description>International Billings from PRIOR YEAR / FULL YEAR</description>
    <inlineHelpText>International Billings from PRIOR YEAR / FULL YEAR</inlineHelpText>
    <label>Intl - PY Full Year - Secure Shredding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>