force-app/main/default/objects/IM_Customer_Account__c/fields/Intl_PY_Full_Year_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>Intl_PY_Full_Year_TOTAL__c</fullName>
    <formula>Intl_PY_Full_Year_Digital__c +
 Intl_PY_Full_Year_DMS__c +
 Intl_PY_Full_Year_Off_Site_Data_Prot__c +
 Intl_PY_Full_Year_RM__c +
 Intl_PY_Full_Year_Secure_Shredding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intl - PY Full Year - TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>