force-app/main/default/objects/IM_Customer_Account__c/fields/Intl_PY_Last_Month_Secure_Shredding__c.field-meta.xml
<CustomField>
    <fullName>Intl_PY_Last_Month_Secure_Shredding__c</fullName>
    <description>International Billings from PRIOR YEAR / LAST MONTH</description>
    <inlineHelpText>International Billings from PRIOR YEAR / LAST MONTH</inlineHelpText>
    <label>Intl - PY Last Month - Secure Shredding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>