force-app/main/default/objects/IM_Customer_Account__c/fields/INTL_PY_Last_Month_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>INTL_PY_Last_Month_TOTAL__c</fullName>
    <formula>Intl_PY_Last_Month_Digital__c +
 Intl_PY_Last_Month_DMS__c +
 Intl_PY_Last_Month_Off_Site_Data_Pro__c +
 Intl_PY_Last_Month_RM__c +
 Intl_PY_Last_Month_Secure_Shredding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INTL - PY Last Month - TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>