force-app/main/default/objects/IM_Customer_Account__c/fields/Intl_PY_YTD_Off_Site_Data_Protection__c.field-meta.xml
<CustomField>
    <fullName>Intl_PY_YTD_Off_Site_Data_Protection__c</fullName>
    <description>International Billings from PRIOR YEAR / YEAR-TO-DATE</description>
    <inlineHelpText>International Billings from PRIOR YEAR / YEAR-TO-DATE</inlineHelpText>
    <label>Intl - PY YTD - Off-Site Data Protection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>