force-app/main/default/objects/IM_Customer_Account__c/fields/Iron_Mtn_Grouping_IMGA__c.field-meta.xml
<CustomField>
    <fullName>Iron_Mtn_Grouping_IMGA__c</fullName>
    <formula>IM_Account__r.IM_IMGA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Iron Mtn Grouping (IMGA)</label>
    <type>Text</type>
</CustomField>