force-app/main/default/objects/IM_Customer_Account__c/fields/Last_Month_DPU_Total__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_DPU_Total__c</fullName>
    <label>Last Month DPU Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>