force-app/main/default/objects/IM_Customer_Account__c/fields/NA_CY_Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>NA_CY_Invoice_Period__c</fullName>
    <description>The invoice period of the NA revenue amount fields.</description>
    <label>NA - CY Invoice Period</label>
    <type>Date</type>
</CustomField>