force-app/main/default/objects/IM_Customer_Account__c/fields/NA_CY_Last_Month_DMS__c.field-meta.xml
<CustomField>
    <fullName>NA_CY_Last_Month_DMS__c</fullName>
    <description>North America Billings from CURRENT YEAR / LAST MONTH</description>
    <inlineHelpText>North America Billings from CURRENT YEAR / LAST MONTH</inlineHelpText>
    <label>NA - CY Last Month - DMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>