force-app/main/default/objects/IM_Customer_Account__c/fields/NA_CY_Last_Month_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>NA_CY_Last_Month_TOTAL__c</fullName>
    <formula>NA_CY_Last_Month_Consulting__c + NA_CY_Last_Month_DB_R__c + NA_CY_Last_Month_Digital__c + NA_CY_Last_Month_DMS__c + NA_CY_Last_Month_Film_Sound__c + NA_CY_Last_Month_IPM__c + NA_CY_Last_Month_RM__c + NA_CY_Last_Month_Secure_Shredding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NA - CY Last Month - TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>