force-app/main/default/objects/IM_Customer_Account__c/fields/NA_CY_YTD_IPM__c.field-meta.xml
<CustomField>
    <fullName>NA_CY_YTD_IPM__c</fullName>
    <description>North America Billings from CURRENT YEAR / YEAR-TO-DATE</description>
    <inlineHelpText>North America Billings from CURRENT YEAR / YEAR-TO-DATE</inlineHelpText>
    <label>NA - CY YTD - IPM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>