force-app/main/default/objects/IM_Customer_Account__c/fields/NA_PY_Full_Year_Secure_Shredding__c.field-meta.xml
<CustomField>
    <fullName>NA_PY_Full_Year_Secure_Shredding__c</fullName>
    <description>North America Billings from PRIOR YEAR / FULL YEAR</description>
    <inlineHelpText>North America Billings from PRIOR YEAR / FULL YEAR</inlineHelpText>
    <label>NA - PY Full Year - Secure Shredding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>