force-app/main/default/objects/IM_Customer_Account__c/fields/NA_PY_Last_Month_Consulting__c.field-meta.xml
<CustomField>
    <fullName>NA_PY_Last_Month_Consulting__c</fullName>
    <description>North America Billings from PRIOR YEAR / LAST MONTH</description>
    <inlineHelpText>North America Billings from PRIOR YEAR / LAST MONTH</inlineHelpText>
    <label>NA - PY Last Month - Consulting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>